# structs

./: .gitignore  .hlint.yaml  .travis.yml  CHANGELOG.markdown  Data-Struct-Internal-Label.html  Data-Struct-Internal-LinkCut.html  Data-Struct-Internal-Order.html  Data-Struct-Internal.html  Data-Struct-Label.html  Data-Struct-LinkCut.html  Data-Struct-Order.html  Data-Struct-TH.html  Data-Struct.html  HLint.hs  README.markdown  Setup.lhs  Struct.hs  cabal.haskell-ci  dist  doc-index.html  index-frames.html  index.html  mini_Data-Struct-Internal-Label.html  mini_Data-Struct-Internal-LinkCut.html  mini_Data-Struct-Internal-Order.html  mini_Data-Struct-Internal.html  mini_Data-Struct-Label.html  mini_Data-Struct-LinkCut.html  mini_Data-Struct-Order.html  mini_Data-Struct-TH.html  mini_Data-Struct.html  stack-7.10.yaml  stack-7.8.yaml  stack-8.4.yaml  stack.yaml  structs.cabal  structs.haddock
.github/workflows/: haskell-ci.yml
src/: Data-Struct-Internal-Label.html  Data-Struct-Internal-LinkCut.html  Data-Struct-Internal-Order.html  Data-Struct-Internal.html  Data-Struct-Label.html  Data-Struct-LinkCut.html  Data-Struct-Order.html  Data-Struct-TH.html  Data-Struct.html
src/Data/: Struct.hs
src/Data/Struct/: Internal.hs  Label.hs  LinkCut.hs  Order.hs  TH.hs
src/Data/Struct/Internal/: Label.hs  LinkCut.hs  Order.hs
src/Data/Struct/Label/: Internal.hs
tests/: doctests.hs  doctests.hsc  unit.hs
