name:          structs
category:      Data
version:       0.1.3
license:       BSD3
cabal-version: 1.22
license-file:  LICENSE
author:        Edward A. Kmett
maintainer:    Edward A. Kmett <ekmett@gmail.com>
stability:     provisional
homepage:      http://github.com/ekmett/structs/
bug-reports:   http://github.com/ekmett/structs/issues
copyright:     Copyright (C) 2015-2017 Edward A. Kmett
build-type:    Custom
tested-with:   GHC == 8.0.2
             , GHC == 8.2.2
             , GHC == 8.4.4
             , GHC == 8.6.5
             , GHC == 8.8.1
             , GHC == 8.10.1
synopsis:      Strict GC'd imperative object-oriented programming with cheap pointers.
description:
  This project is an experiment with a small GC'd strict mutable imperative universe with cheap pointers inside of the GHC runtime system.

extra-source-files:
  .hlint.yaml
  CHANGELOG.markdown
  README.markdown
  Warning.hs

custom-setup
  setup-depends:
    base          >= 4.9 && <5,
    Cabal         >= 1.10,
    cabal-doctest >= 1.0.1 && <1.1

source-repository head
  type: git
  location: git://github.com/ekmett/structs.git

-- You can disable the doctests test suite with -f-test-doctests
flag test-doctests
  default: True
  manual: True

library
  build-depends:
    base >= 4.9 && < 5,
    deepseq,
    template-haskell >= 2.11 && < 2.17,
    ghc-prim,
    primitive

  exposed-modules:
    Data.Struct
    Data.Struct.TH
    Data.Struct.Internal
    Data.Struct.Internal.Label
    Data.Struct.Internal.LinkCut
    Data.Struct.Internal.Order
    Data.Struct.Label
    Data.Struct.LinkCut
    Data.Struct.Order

  ghc-options: -Wall -fwarn-monomorphism-restriction -fwarn-identities -fwarn-incomplete-record-updates -fwarn-incomplete-uni-patterns -fno-warn-wrong-do-bind
  hs-source-dirs: src
  default-language: Haskell2010

test-suite doctests
  type:           exitcode-stdio-1.0
  main-is:        doctests.hs
  ghc-options:    -Wall -threaded
  hs-source-dirs: tests
  default-language: Haskell2010

  x-doctest-options: -fobject-code

  if !flag(test-doctests)
    buildable: False
  else
    build-depends:
      base,
      directory >= 1.0,
      doctest >= 0.9.1,
      filepath,
      parallel,
      structs

test-suite unit
  type: exitcode-stdio-1.0
  main-is: unit.hs
  hs-source-dirs: tests
  default-language: Haskell2010
  build-depends:
    structs,
    base,
    QuickCheck,
    tasty,
    tasty-quickcheck,
    tasty-hunit,
    primitive
