name:          structs
category:      Data
version:       0.1.9
license:       BSD3
cabal-version: 1.22
license-file:  LICENSE
author:        Edward A. Kmett
maintainer:    Edward A. Kmett <ekmett@gmail.com>
stability:     provisional
homepage:      http://github.com/ekmett/structs/
bug-reports:   http://github.com/ekmett/structs/issues
copyright:     Copyright (C) 2015-2017 Edward A. Kmett
build-type:    Simple
tested-with:   GHC == 8.0.2
             , GHC == 8.2.2
             , GHC == 8.4.4
             , GHC == 8.6.5
             , GHC == 8.8.4
             , GHC == 8.10.7
             , GHC == 9.0.2
             , GHC == 9.2.8
             , GHC == 9.4.5
             , GHC == 9.6.2
synopsis:      Strict GC'd imperative object-oriented programming with cheap pointers.
description:
  This project is an experiment with a small GC'd strict mutable imperative universe with cheap pointers inside of the GHC runtime system.

extra-source-files:
  .hlint.yaml
  CHANGELOG.markdown
  README.markdown

source-repository head
  type: git
  location: git://github.com/ekmett/structs.git

library
  build-depends:
    base >= 4.9 && < 5,
    deepseq,
    template-haskell >= 2.11 && < 2.22,
    -- TODO: Eventually, we should bump the lower version bounds to >=0.6 so that
    -- we can remove some CPP in Data.Struct.TH.
    th-abstraction >= 0.4 && < 0.7,
    ghc-prim,
    primitive

  exposed-modules:
    Data.Struct
    Data.Struct.TH
    Data.Struct.Internal
    Data.Struct.Internal.Label
    Data.Struct.Internal.LinkCut
    Data.Struct.Internal.Order
    Data.Struct.Label
    Data.Struct.LinkCut
    Data.Struct.Order

  ghc-options: -Wall -fwarn-monomorphism-restriction -fwarn-identities -fwarn-incomplete-record-updates -fwarn-incomplete-uni-patterns -fno-warn-wrong-do-bind
               -Wno-unticked-promoted-constructors
  hs-source-dirs: src
  default-language: Haskell2010

test-suite unit
  type: exitcode-stdio-1.0
  main-is: unit.hs
  hs-source-dirs: tests
  default-language: Haskell2010
  build-depends:
    structs,
    base,
    QuickCheck,
    tasty,
    tasty-quickcheck,
    tasty-hunit,
    primitive
